temporary menu align fix

--- a/css/style.less
+++ b/css/style.less
@@ -160,7 +160,7 @@ select {
     }
     .content {
         max-width: 980px;
-        margin: 0 auto;
+        margin: 0 auto !important;        
     }
     #nav {
         background: silver;
